<resources>
    <string name="app_name">Book Futsal</string>
    <string name="title_activity_maps_with_sports_centers">MapsActivityWithSportsCenters</string>
    <string name="google_map_api_key">AIzaSyBa-qewx23OavuQfHUbMcsJ6nBT00f13EU</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="myReservations">My reservations</string>
    <string name="logout">Logout</string>
    <string name="modifyProfile">Modifier profil</string>
    <string name="menu_drawer_open">Drawer open</string>
    <string name="menu_drawer_close">Drawer close</string>
    <string name="login">Login</string>
    <string name="sign_in_title">Sign In</string>
    <string name="email">Email </string>
    <string name="password">Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="signup_text">Sign Up</string>


</resources>