<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/home">
    </item>

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_insert_emoticon_24"
        android:title="@string/profile">
    </item>
    <item
        android:id="@+id/menuMyReservations"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/myReservations"></item>


    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/menuLogout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout">

            </item>
            <item
                android:id="@+id/menuLogin"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/login">
            </item>

        </menu>
    </item>


</menu>